Opened 5 years ago

Closed 5 years ago

#15502 closed bug (fixed)

Terminal crashes on keyboard layout switching

Reported by: iam-alex Owned by: jscipione
Priority: normal Milestone: R1/beta2
Component: Applications/Terminal Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Terminal crashes when keymap changes. Even in case Terminal running in background.

Attachments (1)

Terminal-7215-debug-02-12-2019-03-12-56.report (11.5 KB ) - added by iam-alex 5 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by diver, 5 years ago

Keywords: crash keymapswitcher removed
Owner: changed from jackburton to jscipione
Platform: x86-64All
Status: newassigned

Looks like a regression after hrev53590.

comment:2 by diver, 5 years ago

Milestone: UnscheduledR1/beta2

comment:3 by pulkomandy, 5 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev53642.

Note: See TracTickets for help on using tickets.